--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section id="links">
         <h2>Recursos y Enlaces</h2>
         <ul>
-            <li><a href="https://[tu-usuario].github.io/[tu-repositorio]/" target="_blank">Mi página personal (Actividad Módulo 2)</a></li>
+            <li><a href="https://jeisalcedo.github.io/Derecho-Tributario-para-el-Derecho-Privado-Estrategias-y-Aplicaciones-Pr-cticas/"_blank">Mi página personal (Actividad Módulo 2)</a></li>
             <li><a href="https://emersonuan.github.io/firstwebpage/" target="_blank">Página de referencia</a></li>
             <li><a href="https://www.elejandria.com" target="_blank">Ejemplo de creatividad con IA</a></li>
             <li><a href="https://openai.com/blog" target="_blank">Blog de OpenAI (para inspiración)</a></li>
