--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <section id="links" class="card">
             <h2><i class="fas fa-link"></i> Enlaces Útiles</h2>
             <div class="links-grid">
-                <a href="https://github.com/tu-usuario" class="btn" target="_blank"><i class="fab fa-github"></i> Mi GitHub</a>
+                <a href="https://jeisalcedo.github.io/Derecho-Tributario-para-el-Derecho-Privado-Estrategias-y-Aplicaciones-Pr-cticas/"_blank"><i class="fab fa-github"></i> Mi GitHub</a>
                 <a href="https://emersonuan.github.io/firstwebpage/" class="btn" target="_blank"><i class="fas fa-external-link-alt"></i> Página de Referencia</a>
                 <a href="https://openai.com/blog" class="btn" target="_blank"><i class="fas fa-newspaper"></i> Blog de OpenAI</a>
             </div>
