--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>¡IA en la Educación es Genial!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <title>¡Explorando la IA en la Educación!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Nunito', sans-serif;
-            background: linear-gradient(45deg, #f0f9ff 0%, #c1f0c1 100%);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(45deg, #f4f4f4 0%, #e0f7fa 100%);
             color: #333;
             animation: fondoAnimado 5s linear infinite;
         }
@@ -29,12 +29,12 @@
         }
 
         header {
-            background: #845ef7;
+            background: #29b6f6;
             color: white;
             padding: 20px;
             text-align: center;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px #000000;
+            font-size: 2.2em;
+            text-shadow: 2px 2px 4px #00000040;
             animation: entradaHeader 1s ease-out;
         }
 
@@ -73,25 +73,25 @@
         }
 
         h2 {
-            color: #845ef7;
-            border-bottom: 3px solid #845ef7;
+            color: #29b6f6;
+            border-bottom: 3px solid #29b6f6;
             padding-bottom: 5px;
         }
 
         a {
-            color: #007bff;
+            color: #0d47a1;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 600;
             transition: color 0.3s ease;
         }
 
         a:hover {
-            color: #0056b3;
+            color: #1565c0;
             text-decoration: underline;
         }
 
         button {
-            background-color: #ff851b;
+            background-color: #ffa726;
             color: white;
             border: none;
             padding: 12px 24px;
@@ -103,7 +103,7 @@
         }
 
         button:hover {
-            background-color: #e67117;
+            background-color: #ff8f00;
         }
 
         input[type="number"] {
@@ -129,7 +129,7 @@
             font-style: italic;
             background-color: #f9f9f9;
             padding: 15px;
-            border-left: 5px solid #ff851b;
+            border-left: 5px solid #ffa726;
             border-radius: 10px;
             margin: 20px 0;
         }
@@ -181,13 +181,13 @@
 <body>
 
     <header>
-        🎉 ¡Aventuras con la IA Educativa! 🚀
+        🚀 ¡Aventuras con la IA Educativa! 🤖
     </header>
 
     <section>
         <h2>Mi Viaje con la IA ✨</h2>
         <div style="float: right; margin-left: 15px; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <img src="URL_DE_TU_IMAGEN_IA_1" alt="Explorando la IA" style="max-width: 200px;">
+            <img src="openart-image_syc1aId-_1746544044108_raw.jpg" alt="Niña saltando en campo de flores" style="max-width: 200px;">
         </div>
         <p>
             ¡Hola a todos! Embarcarme en el mundo de la Inteligencia Artificial ha sido como descubrir un universo nuevo. Al principio, la IA me parecía algo lejano, pero este curso me abrió los ojos a un montón de herramientas súper útiles. Me ha flipado cómo la IA puede transformar la educación, desde crear contenido alucinante hasta hacer que las tareas sean pan comido y ¡desatar nuestra creatividad!
@@ -197,7 +197,7 @@
     <section>
         <h2>Reflexiones Personales 🤓</h2>
         <div style="float: left; margin-right: 15px; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <img src="URL_DE_TU_IMAGEN_IA_2" alt="Pensando en la IA" style="max-width: 200px;">
+            <img src="openart-image_UjbO6CTC_1746543996777_raw.jpg" alt="Robot humanoide en el bosque" style="max-width: 200px;">
         </div>
         <ul>
             <li>
@@ -219,7 +219,7 @@
     <section>
         <h2>¡Links que Inspiran! 🔗</h2>
         <div style="float: right; margin-left: 15px; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <img src="URL_DE_TU_IMAGEN_IA_3" alt="Recursos de IA" style="max-width: 200px;">
+            <img src="openart-image_KAc-RwZ8_1746543944026_raw.jpg" alt="Profesora explicando IA" style="max-width: 200px;">
         </div>
         <p>Aquí te dejo algunos enlaces que me han resultado súper útiles y que te pueden dar un montón de ideas:</p>
         <ul>
@@ -248,10 +248,10 @@
     </section>
 
     <section>
-        <h2>¡Arte Generado por la IA! 🎨</h2>
+        <h2>¡Explorando el Universo de la IA! 🌌</h2>
         <div style="text-align: center;">
-            <img src="URL_DE_TU_IMAGEN_IA_4" alt="Imagen IA" style="max-width: 400px;">
-            <p><em>Esta imagen, creada con IA, es una explosión de creatividad perfecta para inspirar en el aula.</em></p>
+            <img src="openart-image_mb3u2uqN_1746543875285_raw.jpg" alt="Persona en la cima mirando galaxia" style="max-width: 400px;">
+            <p><em>La IA abre un universo de posibilidades, ¡listos para explorarlo juntos!</em></p>
         </div>
     </section>
 
@@ -278,11 +278,10 @@
     </section>
 
     <section>
-        <h2>¡Una Pildorita de Inspiración! 🌟</h2>
+        <h2>¡Una Pildorita de Sabiduría! 🌟</h2>
         <div style="text-align: center;">
-            <img src="URL_DE_TU_IMAGEN_IA_5" alt="Texto Inspirador" style="max-width: 300px; border-radius: 50%;" >
-            <blockquote>
-                "La educación no es la respuesta a la pregunta. La educación es el medio para encontrar la respuesta a todas las preguntas." - Louis L'Amour
+            <blockquote style="border-left-color: #64b5f6;">
+                "La tecnología es solo una herramienta. En términos de conseguir que los niños trabajen juntos y motivarlos, el profesor es lo más importante." - Bill Gates
             </blockquote>
         </div>
     </section>
