--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <p>Aquí te dejo algunos enlaces que me han resultado súper útiles y que te pueden dar un montón de ideas:</p>
         <ul>
             <li>
-                <a href="index.html" target="_blank">
+                <a href="https://jeisalcedo.github.io/Derecho-Tributario-para-el-Derecho-Privado-Estrategias-y-Aplicaciones-Pr-cticas/" target="_blank">
                     <i class="fas fa-home"></i> Mi Página Personal (¡Un clásico del Módulo 2!)
                 </a>
             </li>
@@ -288,7 +288,7 @@
 
     <footer>
         <p>
-            Hecho con ❤️ por [Tu Nombre] | ¡A explorar el futuro de la educación con IA!
+            Hecho con ❤️ por [Jeimy Carolina Salcedo Triana] | ¡A explorar el futuro de la educación con IA!
         </p>
     </footer>
 
